--- a/app/pom.xml
+++ b/app/pom.xml
@@ -90,6 +90,13 @@
         </dependency>
 
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <!-- ==================== 构建配置 ==================== -->
