feat: Distributed cache processing

--- a/app/src/main/resources/application-cache.yml
+++ b/app/src/main/resources/application-cache.yml
@@ -8,7 +8,7 @@ cache:
   active-type: redis
 
   # 缓存键前缀
-  key-prefix: "app:cache:"
+  key-prefix: "app:cache"
 
   # Redis 配置 (使用Redisson客户端)
   redis:
