--- a/app/pom.xml
+++ b/app/pom.xml
@@ -53,6 +53,7 @@
         <wechaty.version>0.1.5-SNAPSHOT</wechaty.version>
         <redisson.version>3.38.1</redisson.version>
         <fastJson.version>2.0.43</fastJson.version>
+        <hutool.version>5.8.41</hutool.version>
     </properties>
 
     <!-- ==================== 依赖管理 ==================== -->
@@ -104,6 +105,19 @@
             <version>${fastJson.version}</version>
         </dependency>
 
+        <!-- Caffeine 本地缓存 -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+
+
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
 
     </dependencies>
 
