--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -8,5 +8,10 @@ spring:
     suffix: .html
     encoding: UTF-8
     cache: false
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
 server:
   port: 8089
